hphp/test/slow/enum_class/vshape_bad1.php.expectf

Fatal error: V1 cannot inherit the constant B from F1, because it was previously inherited from E0 in %s/vshape_bad1.php on line 17
